Fix chat header alignment in IE

--- a/public/js/views/app/headerView.less
+++ b/public/js/views/app/headerView.less
@@ -55,7 +55,7 @@
   display: flex;
   align-items: center;
   // header can expand to fit long topics when hovered over
-  min-height: @chat-frame-desktop-header-height;
+  height: @chat-frame-desktop-header-height;
 }
 
 
@@ -65,6 +65,7 @@
   flex: 1;
   flex-wrap: wrap;
   align-items: flex-start;
+  height: auto;
   max-height: @chat-frame-desktop-header-height;
 
   transition: max-height .3s ease;
